--- a/gestionEcole/src/vue/connexionAdmin.form
+++ b/gestionEcole/src/vue/connexionAdmin.form
@@ -23,59 +23,54 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="134" max="-2" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace pref="135" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <Component id="boutonEnseignants" min="-2" pref="123" max="-2" attributes="0"/>
-                  <Component id="boutonDiscipline" min="-2" pref="123" max="-2" attributes="0"/>
-                  <Component id="boutonEleves" alignment="0" min="-2" pref="123" max="-2" attributes="0"/>
+                  <Component id="boutonDiscipline" min="-2" max="-2" attributes="0"/>
+                  <Component id="boutonProfesseur" min="-2" max="-2" attributes="0"/>
+                  <Component id="boutonEleves" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="113" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="148" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="boutonEleves" min="-2" pref="56" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="boutonEnseignants" min="-2" pref="56" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="boutonDiscipline" min="-2" pref="56" max="-2" attributes="0"/>
-              <EmptySpace pref="45" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
+              <Component id="boutonEleves" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+              <Component id="boutonProfesseur" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+              <Component id="boutonDiscipline" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="60" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JButton" name="boutonEleves">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Que voulez-vous g&#xe9;rer ?"/>
+        <Property name="text" type="java.lang.String" value="Eleves"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boutonElevesActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="boutonProfesseur">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Professeurs"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boutonProfesseurActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="boutonDiscipline">
       <Properties>
         <Property name="text" type="java.lang.String" value="Discipline"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="boutonEnseignants">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Enseignants"/>
-      </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="boutonEleves">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="&#xc9;l&#xe8;ves"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boutonDisciplineActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
